Agrego notebooks con pruebas de codigo

--- a/borrador/Pruebas TF IDF.ipynb
+++ b/borrador/Pruebas TF IDF.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -74,23 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-108-97805888b6a8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Cargar datos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Informe 93 - HCDN (Respuestas) (1) (1).xlsx'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msheetname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Respuestas de formulario 1'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mES_stopwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ES_stopwords.txt'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mheader\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mES_stopwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mES_stopwords\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Sacar las Pretuntas o temas vacios\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cargar datos\n",
     "data = pd.read_excel('Informe 93 - HCDN (Respuestas) (1) (1).xlsx',sheetname='Respuestas de formulario 1')\n",
@@ -129,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -820,13 +808,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "D = pairwise_distances(matriz)\n"
+    "# Matriz de distancias\n",
+    "D = pairwise_distances(tfidf_mat)\n"
    ]
   },
   {
@@ -993,7 +982,8 @@
    "cell_type": "code",
    "execution_count": 364,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1468,8 +1458,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# Generar comparacion elasticsearch - sklearn para similares\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Elijo 9 preguntas cuyas vecinas mas cercanas pertenzcan a los siguietes grupos\n",
+    "# cortas - 3, medias - 3, largas - 3\n",
+    "import codecs\n",
+    "\n",
+    "\n",
+    "from elasticsearch import Elasticsearch\n",
+    "es = Elasticsearch()\n",
+    "f = codecs.open(\"./comparacion_preguntas.txt\", \"w\", \"utf-8\")\n",
+    "dminima = np.amin(D,1)\n",
+    "l1 = np.percentile(dminima,10)\n",
+    "l2 = np.percentile(dminima,45)\n",
+    "l3 = np.percentile(dminima,55)\n",
+    "l4 = np.percentile(dminima,90)\n",
+    "\n",
+    "g1 = np.flatnonzero(dminima < l1)\n",
+    "g2 = np.flatnonzero((dminima > l2) & (dminima < l3))\n",
+    "g3 = np.flatnonzero(dminima > l4)\n",
+    "\n",
+    "muestras = [np.random.choice(g1,3,replace=False),\n",
+    "            np.random.choice(g2,3,replace=False),\n",
+    "            np.random.choice(g3,3,replace=False)]\n",
+    "\n",
+    "\n",
+    "# Genero 3 sugerencias para cada pregunta\n",
+    "for muestra in muestras:\n",
+    "    for pregunta in muestra:\n",
+    "        sugerencias_dist = np.argsort(D[pregunta,:])[:3] # tres sugerencias\n",
+    "        f.write(\"---------------------PREGUNTA NUEVA --------------------------\\n\")\n",
+    "        f.write(preguntas.iloc[pregunta]+ '\\n')\n",
+    "        f.write(\"======== DISTANCIA =======\\n\")\n",
+    "        for p in preguntas.iloc[sugerencias_dist]:\n",
+    "            f.write(p+ '\\n')\n",
+    "            f.write('......'+ '\\n')\n",
+    "        \n",
+    "        f.write(\"======== ELASTIC =======\\n\")\n",
+    "        res = es.get(index=\"mi_indice\", doc_type=\"my_type\", id=str(pregunta))\n",
+    "        f.write('ORIG: ' +  res['_source']['pregunta'] + '\\n')\n",
+    "        query = {\n",
+    "        \"more_like_this\" : {\n",
+    "        \"fields\" : [\"pregunta\"],\n",
+    "        \"like\" : [\n",
+    "        {\n",
+    "            \"_index\" : \"mi_indice\",\n",
+    "            \"_type\" : \"my_type\",\n",
+    "            \"_id\" : str(pregunta)\n",
+    "        }],\n",
+    "        \"min_term_freq\" : 1,\n",
+    "        \"max_query_terms\" : 25\n",
+    "        }}\n",
+    "        res = es.search(index=\"mi_indice\", doc_type=\"my_type\", body={\"from\" : 0, \"size\" : 3, \"query\": query})\n",
+    "        for hit in res['hits']['hits']:\n",
+    "            f.write(hit['_source']['pregunta']+ '\\n')\n",
+    "            f.write('//////////////////////////////// score:' + str(hit['_score']) + '\\n') \n",
+    "f.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -1477,27 +1540,42 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.13710171, -0.05409748, -0.08087499, ..., -0.02903356,\n",
-       "         0.02067871,  0.02060423],\n",
-       "       [ 0.18322294, -0.02305735, -0.03651633, ...,  0.01567197,\n",
-       "         0.03723891, -0.00134786],\n",
-       "       [ 0.20044775, -0.01260446, -0.04811918, ...,  0.01005423,\n",
-       "        -0.01316359,  0.01250547],\n",
-       "       ..., \n",
-       "       [ 0.2322936 ,  0.03845939,  0.00920797, ..., -0.00431266,\n",
-       "         0.05547958,  0.0322802 ],\n",
-       "       [ 0.2529581 ,  0.11313888, -0.05474577, ..., -0.03139609,\n",
-       "         0.00155107,  0.00869457],\n",
-       "       [ 0.33897048,  0.17291207, -0.07150881, ..., -0.01301681,\n",
-       "         0.02055989,  0.00967401]])"
+       "{u'_shards': {u'failed': 0, u'successful': 5, u'total': 5},\n",
+       " u'hits': {u'hits': [], u'max_score': None, u'total': 0},\n",
+       " u'timed_out': False,\n",
+       " u'took': 9}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "662"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(preguntas)"
+   ]
   },
   {
    "cell_type": "code",
