--- a/testeos_del_objeto.ipynb
+++ b/testeos_del_objeto.ipynb
@@ -9,16 +9,7 @@
      "marked": false
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mec/anaconda2/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from TextClassifier import TextClassifier\n",
     "import os\n",
@@ -503,6 +494,246 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import codecs\n",
+    "\n",
+    "TEST_DIR = \"/home/mec/testData/textos/20_newsgroups/\"\n",
+    "cats = os.listdir(TEST_DIR)\n",
+    "cats_totales = []\n",
+    "contenidos = []\n",
+    "for cat in cats:\n",
+    "    temp_list = os.listdir(os.path.join(TEST_DIR, cat))\n",
+    "    cats_totales = cats_totales + [cat] * len(temp_list)\n",
+    "    temp_list = map(lambda x: os.path.join(TEST_DIR, cat, x),\n",
+    "                    temp_list)\n",
+    "    for filename in temp_list:\n",
+    "        with codecs.open(\n",
+    "                filename, encoding='latin1', mode='r') as content_file:\n",
+    "            lines = content_file.readlines()\n",
+    "            content = ''.join(lines[11:])\n",
+    "        contenidos.append(content)\n",
+    "# sacar los textos muy cortos\n",
+    "largo = map(len, contenidos)\n",
+    "#contenidos = [c for c, l in zip(contenidos, largo) if l > 100]\n",
+    "#labels = [lab for lab, l in zip(cats_totales, largo) if l > 100]\n",
+    "labels = cats_totales\n",
+    "ids = [str(i) for i in range(len(contenidos))]\n",
+    "texts = contenidos\n",
+    "tc = TextClassifier(texts, ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.cross_validation import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "            ids, labels, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tc.make_classifier(\"prueba\", X_train, y_train)\n",
+    "indices = np.in1d(tc.ids, X_test)\n",
+    "my_score = tc.prueba.score(tc.tfidf_mat[indices,:], y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.051818181818181819"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer, TfidfTransformer\n",
+    "tv = TfidfVectorizer(input='content', encoding='latin1', decode_error='strict', strip_accents='ascii', \n",
+    "                     lowercase=True, preprocessor=None, tokenizer=None, analyzer='word', stop_words=None, \n",
+    "                     ngram_range=(1, 1), max_df=1.0, min_df=3, max_features=None, \n",
+    "                     vocabulary=None, binary=False, norm='l2', use_idf=True, \n",
+    "                     smooth_idf=True, sublinear_tf=False)\n",
+    "ct = CountVectorizer(input='content', encoding='latin1', decode_error='strict', strip_accents='ascii', \n",
+    "                     lowercase=True, preprocessor=None, tokenizer=None, analyzer='word', stop_words=None, \n",
+    "                     ngram_range=(1, 1), max_df=1.0, min_df=3, max_features=None, \n",
+    "                     vocabulary=None, binary=False)\n",
+    "tfidf_mat = tv.fit_transform(contenidos)\n",
+    "count_mat = ct.fit_transform(contenidos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<19997x51161 sparse matrix of type '<type 'numpy.int64'>'\n",
+       "\twith 2689030 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<type 'numpy.int64'>, encoding='latin1', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=3,\n",
+       "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "        strip_accents='ascii', token_pattern=u'(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "        tokenizer=None, vocabulary=None)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer(analyzer=u'word', binary=False, decode_error=u'strict',\n",
+       "        dtype=<type 'numpy.int64'>, encoding=u'utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), preprocessor=None,\n",
+       "        stop_words=[u'un', u'una', u'unas', u'unos', u'uno', u'sobre', u'todo', u'tambi\\xe9n', u'tras', u'otro', u'alg\\xfan', u'alguno', u'alguna', u'algunos', u'algunas', u'ser', u'es', u'soy', u'eres', u'somos', u'sois', u'estoy', u'esta', u'estamos', u'estais', u'estan', u'como', u'en', u'para', u'atras'...bajais', u'trabajan', u'podria', u'podrias', u'podriamos', u'podrian', u'podriais', u'yo', u'aquel'],\n",
+       "        strip_accents=None, token_pattern=u'(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "        tokenizer=None, vocabulary=None)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc.vectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mat2  = tc.vectorizer.fit_transform(contenidos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<19997x168351 sparse matrix of type '<type 'numpy.int64'>'\n",
+       "\twith 2825463 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<19997x168351 sparse matrix of type '<type 'numpy.int64'>'\n",
+       "\twith 2825463 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc.term_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -528,6 +759,12 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
+  },
+  "toc": {
+   "toc_cell": false,
+   "toc_number_sections": true,
+   "toc_threshold": 4,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
