Intento de mec de integrar modulo al server

--- a/testeos_del_objeto.ipynb
+++ b/testeos_del_objeto.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -551,45 +551,36 @@
     {
      "data": {
       "text/plain": [
-       "(['1276',\n",
-       "  '490',\n",
-       "  '1730',\n",
-       "  '1663',\n",
-       "  '1591',\n",
-       "  '1547',\n",
-       "  '670',\n",
-       "  '1774',\n",
-       "  '1054',\n",
-       "  '1269'],\n",
-       " [1.2288798094209452,\n",
-       "  1.2430788384158264,\n",
-       "  1.2544258965119799,\n",
-       "  1.2562441261041586,\n",
-       "  1.2881940498652613,\n",
-       "  1.2919609024770631,\n",
-       "  1.3023754002500396,\n",
-       "  1.3061540754333394,\n",
-       "  1.3076465960654795,\n",
-       "  1.3091542255528033],\n",
-       " [[u'convenio', u'adoptadas', u'ministerio', u'planificacion', u'federal'],\n",
-       "  [u'2015', u'11', u'fecha', u'informe'],\n",
-       "  [u'convenio', u'gasoducto', u'planificacion', u'federal'],\n",
-       "  [u'costa', u'2015', u'gasoducto', u'ampliacion', u'nacion'],\n",
-       "  [u'convenio', u'fecha', u'suscripto', u'nacion'],\n",
-       "  [u'convenio', u'medidas', u'region', u'nacion'],\n",
-       "  [u'ministerio', u'planificacion', u'nacion'],\n",
-       "  [u'septiembre', u'ministerio', u'2015', u'fecha', u'informe', u'nacion'],\n",
-       "  [u'convenio', u'suscripto', u'informe'],\n",
-       "  [u'ministerio', u'planificacion', u'federal']])"
+       "(['25', '312', '804', '1229', '251', '55', '1097', '1137', '165', '1125'],\n",
+       " [0.95173495795656726,\n",
+       "  1.188631399122408,\n",
+       "  1.2242134714836055,\n",
+       "  1.2248314417610242,\n",
+       "  1.2297536056484417,\n",
+       "  1.2342687024406782,\n",
+       "  1.2422861638784102,\n",
+       "  1.243298488570256,\n",
+       "  1.2506285899495873,\n",
+       "  1.258256817337879],\n",
+       " [[u'revertir', u'medidas', u'situacion'],\n",
+       "  [u'medidas', u'situacion', u'preven'],\n",
+       "  [u'preven'],\n",
+       "  [u'corto', u'situacion', u'plazo'],\n",
+       "  [u'situacion', u'preven'],\n",
+       "  [u'preven'],\n",
+       "  [u'corto', u'situacion', u'plazo'],\n",
+       "  [u'revertir', u'medidas', u'situacion'],\n",
+       "  [u'preven'],\n",
+       "  [u'corto', u'medidas', u'plazo']])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tc.get_similar(\"1111\", max_similars=10)"
+    "tc.get_similar(\"22\", max_similars=10, similarity_cutoff=1.3)"
    ]
   },
   {
