Actualizo traducciones y agrego funcionalidad de agregar pregunta manual

--- a/testeos_del_objeto.ipynb
+++ b/testeos_del_objeto.ipynb
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "tc = TextClassifier(['texto dice algo', 'texto dice otra cosa'], ['id1', 'id2'])"
+    "tc = TextClassifier(['texto dice algo', 'texto dice otra cosa', 'texto dice algo', 'texto dice algo'], ['id1', 'id2', 'id3', 'id4'])"
    ]
   },
   {
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "tc.make_classifier(\"test\",['id1','id2','id3','id4'],['a', 'a', 'b','b'])"
+    "tc.make_classifier(\"test2\",['id1','id2','id3','id4'],['a', 'c', 'b','b'])"
    ]
   },
   {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -89,18 +89,20 @@
     {
      "data": {
       "text/plain": [
-       "(array(['a', 'b'], \n",
-       "       dtype='|S1'),\n",
-       " array([ 5.87072026, -4.9247235 ,  4.99976881,  3.8789758 ]))"
+       "(array(['a', 'b', 'c'], \n",
+       "       dtype='|S1'), array([[-0.39930381,  0.14827667, -0.6957741 ],\n",
+       "        [-0.66095854, -0.40985956,  0.15883936],\n",
+       "        [-0.39930381,  0.14827667, -0.6957741 ],\n",
+       "        [-0.39930381,  0.14827667, -0.6957741 ]]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tc.classify(\"test\", examples=[\"id1\", \"id2\", \"id3\", 'id4'])"
+    "tc.classify(\"test2\", examples=[\"id1\", \"id2\", \"id3\", 'id4'])"
    ]
   },
   {
