Agrego -api- de sugerencias

--- a/testeos_del_objeto.ipynb
+++ b/testeos_del_objeto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -569,9 +569,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -585,12 +585,25 @@
     "preg_cat = preg_cat.sortlevel(0)\n",
     "all_questions = all_questions.sortlevel(0)\n",
     "all_questions.loc['93','tema'] = preg_cat.Tema.values\n",
+    "all_questions.loc['93','subtema'] = preg_cat.Subtema.values\n",
     "all_questions.dropna(subset=['Pregunta'], inplace=True)\n",
     "ES_stopwords = pd.read_csv('ES_stopwords.txt',header=None, encoding='utf-8')\n",
     "ES_stopwords = list(np.squeeze(ES_stopwords.values))\n",
     "all_questions.dropna(subset=['Pregunta'], inplace=True) # Sacar preguntas vacias\n",
     "longitud = all_questions.Pregunta.str.len()\n",
-    "all_questions = all_questions.loc[longitud.sort_values().index[50:]] # Sacar preguntas demasiado cortas"
+    "all_questions = all_questions.loc[longitud.sort_values().index[50:]] # Sacar preguntas demasiado cortas\n",
+    "all_questions.index.names = ['Informe', 'n_pregunta']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "all_questions.to_csv('preguntas_con_subtema.csv', encoding='utf-8')"
    ]
   },
   {
